--- a/src/index.html
+++ b/src/index.html
@@ -19,5 +19,19 @@
 </head>
 <body class="mat-typography">
   <app-root></app-root>
+
+<!--footer-->
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <p><i class="fa fa-copyright"></i> Copyright 2023 by OEMS Team </p>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+
+
 </body>
 </html>
